[package]
name = "tehda"
version = "0.1.0"
edition = "2021"
authors = ["Nadia (https://mikufan.page)", "Autumn <auctumnus@pm.me> (https://autumns.page)"]
description = "Wayland launcher/menu program"
license-file = "LICENSE"
keywords=["wayland","launcher","menu"]
categories = ["gui"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argh = "0.1.10"
gtk = "0.16.2"
gdk = "0.16.2"
gtk-layer-shell = "0.5.1"
confy = { version = "0.5.1", features=["yaml_conf"], default-features=false }
log = "0.4.17"
pretty_env_logger = "0.4"
serde = { version = "1.0.152", features = ["derive"] }
serde_yaml = "0.9.17"